--- a/src/styles/_Globals.scss
+++ b/src/styles/_Globals.scss
@@ -3,7 +3,9 @@
 
 // Colors
 $primary: #01B075;
-$secondary: #C3E1E1;
+$primary-2: #62b499;
+$primary-3: #a2d6c5;
+$primary-4: #C3E1E1;
 
 $grayscale-1: #FFFFFF;
 $grayscale-2: #f7f7f7;
@@ -22,6 +24,9 @@ $spacing-large: 50px;
 
 // Border-radius
 $border-radius: 10px;
+
+//z-index
+$z-index-navBav: 5;
 
 // Shadow
 @mixin shadow($color) {
